--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
        <a class="main-header-logo" href="index.html">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
       </a>
-      <ul class="site-navigation">
+      <ul class="list-unstyled site-navigation">
         <li><a href="about.html">Студия</a></li>
         <li><a href="clients.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
@@ -24,7 +24,7 @@
   </header>
 
   <main class="container">
-    <h1>Магазин готовых шаблонов</h1>
+    <h1 class="title">Магазин готовых шаблонов</h1>
     <aside class="template-filter">
       <h2 class="visually-hidden">Фильтр шаблонов</h2>
       <form methot="get" action="https://echo.htmlacademy.ru">
@@ -73,7 +73,7 @@
       </div>
 	  
       <h2 class="visually-hidden">Каталог</h2>
-      <ul class="templates-list">
+      <ul class="list-unstyled templates-list">
         <li class="catalog-item selected-item">
           <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
           <a href ="#"><h3>Sedona</h3></a>
@@ -113,7 +113,7 @@
       </ul>
     </section>
     <nav>
-      <ul class="pagination-list">
+      <ul class="list-unstyled pagination-list">
         <li class="pagination-item-current"><a href="#">1</a></li>
         <li class="pagination-item"><a href="#">2</a></li>
         <li class="pagination-item"><a href="#">3</a></li>
