--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="main-header-logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
         </a>
-		<ul class="site-navigation">
+		<ul class="list-unstyled site-navigation">
           <li><a href="about.html">Студия</a></li>
 		  <li><a href="clients.html">Клиенты</a></li>
 		  <li><a href="catalog.html">Магазин</a></li>
@@ -46,7 +46,7 @@
 	  
 	  <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
-		<ul class="services-list">
+		<ul class="list-unstyled services-list">
           <li class="service-site">
         	<h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
@@ -71,7 +71,7 @@
 		  <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
 		  <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 		  <h3>Выполняем заказы на разработку:</h3>   
-		  <ul class="studio-service-list">
+		  <ul class="list-unstyled studio-service-list">
 		    <li>Веб-сайтов любой сложности</li>
 		    <li>Мобильных приложение для iOS и Android</li>
 		    <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -96,26 +96,26 @@
         </aside>
       </section>
 	 
-	 <section class="portfolio">
+	 <section class="partner">
       <h2 class="visually-hidden">Партнеры</h2>
         <ul>
         <li>
-          <a class="portfolio-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <a class="partner-logo" href="https://htmlacademy.ru/intensive/htmlcss">
             <img src="img/logo-1.png" width="260" height="180" alt="Логотип HTML Academy">
           </a>
         </li>
         <li>
-          <a class="portfolio-logo">
+          <a class="partner-logo">
             <img src="img/logo-2.png" width="260" height="180" alt="Логотип Borodinski">
           </a>
         </li>
         <li>
-          <a class="portfolio-logo">
+          <a class="partner-logo">
             <img src="img/logo-3.png" width="260" height="180" alt="Логотип Pink">
           </a>
         </li>
         <li>
-          <a class="portfolio-logo">
+          <a class="partner-logo">
             <img src="img/logo-4.png" width="260" height="180" alt="Логотип MISHKA">
           </a>
         </li>
