Добавил класс для кнопки. Начал работу с флексами.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		  <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
 		 </div> 
-	    <div class="slide">
+	     
+		<div class="slide">
           <b>Любим математику как никто другой</b>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
@@ -41,9 +42,9 @@
           <b>Только ночь, только хардкор</b>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
-        </div>
-      </section>
-	  
+        </div>-->
+      </section> 
+	
 	  <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
 		<ul class="list-unstyled services-list">
@@ -170,8 +171,9 @@
         <textarea name="user-message" id="user-message" value="Текст письма" placeholder="В свободной форме" required> </textarea>
       </p>
 	  
-      <input type="submit" name="user-submit" id="user-submit" value="Отправить">
+      <input type="submit" class="write-button" name="user-submit" id="user-submit" value="Отправить">
     </form>
   </section>
-</body>
+
+  </body>
 </html>
