Внёс изменения для создания сетки

--- a/catalog.html
+++ b/catalog.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Нёрдс - каталог</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet"> 
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <header class="main-header">
-    <nav class="main-navigation">
-       <a class="main-header-logo" href="index.html">
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
-      </a>
-      <ul class="list-unstyled site-navigation">
-        <li><a href="about.html">Студия</a></li>
-        <li><a href="clients.html">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <a class="cart" href="#">Корзина</a>
-    </nav> 
-  </header>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Нёрдс - каталог</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet"> 
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body class="inner-page">
+    <header class="main-header">
+      <nav class="container main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
+        </a>
+        <div class="main-navigation-wrapper"> 
+          <ul class="list-unstyled text-uppercase site-navigation">
+            <li><a href="index.html">Студия</a></li>
+            <li><a href="clients.html">Клиенты</a></li>
+            <li><a class="active">Магазин</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+          </ul>
+          <a class="text-uppercase cart" href="#" >Корзина</a>
+        </div>
+      </nav>
+      <div class="container">
+        <p class="title">Магазин готовых шаблонов</p>
+      </div>
+    </header>
 
   <main class="container">
     <h1 class="title">Магазин готовых шаблонов</h1>
@@ -122,56 +127,62 @@
     </nav>
   </main>
 
-  <footer class="main-footer">
+ <footer class="main-footer">
+
     <h2 class="visually-hidden">Контакты</h2>
+
     <section class="footer-map">
-      <h3 class="visually-hidden">Адрес</h3>
-      <div class="contacts">
-        <b class="text-uppercase">Nerds design studio</b>
-        <address>
-           <p>
-            191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8
-          </p>
-          <p>тел. +7 (812) 275-75-75</p>
-        </address>
-        <a class="write-button" href="#user-form">Напишите нам</a>
-        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
+      <div class="container">
+        <h3 class="visually-hidden">Адрес</h3>
+        <div class="contacts">
+          <b>Nerds design studio</b>
+          <address class="addres">
+            <p>191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</br>
+            тел. +7 (812) 275-75-75</p>
+          </address>
+          <a class="button write-button" href="#user-form">Напишите нам</a>
+        </div>
       </div>
+      <div class="map">
+        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
+      </div>     
     </section>
-    <section class="footer-social">
+    <section class="footer-social container">
       <h3 class="visually-hidden">Мы в социальных сетях</h3>
-      <ul>
-        <li><a class="social-button-vk" href="#">Вконтакте</a></li>
-        <li><a class="social-button-fb" href="#">Фейсбук</a></li>
-        <li><a class="social-button-inst" href="#">Инстаграм</a></li>
+      <ul class="list-unstyled social-list">
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
       </ul>
-      <b>Давайте дружить, это выгодно!</b>
-      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      <div>
+        <b>Давайте дружить, это выгодно!</b>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      <div>
     </section>
   </footer>
 
   <section class="modal-write-us">
     <h2>Напишите нам</h2>
     <button class="btn-close" type="button" aria-label="Закрыть форму для отправления письма"><span class="visually-hidden">Закрыть</span></button>
-	<form id="user-form" action="https://echo.htmlacademy.ru" method="post">
+    <form id="user-form" action="https://echo.htmlacademy.ru" method="post">
       <p>
-	    <label for="user-name">Ваше имя:</label>
+        <label for="user-name">Ваше имя:</label>
         <input type="text" name="user-name" id="user-name" autofocus placeholder="Имя Фамилия" required>
       </p>
-	  
-	  <p>
-	    <label for="e-mail">Ваш e-mail:</label>
+
+      <p>
+        <label for="e-mail">Ваш e-mail:</label>
         <input type="email" name="user-email" id="user-email" placeholder="email@example.com" required>
       </p>
-      
-	  <p>
-	    <label for="message">Текст письма:</label>
+
+      <p>
+        <label for="message">Текст письма:</label>
         <textarea name="user-message" id="user-message" value="Текст письма" placeholder="В свободной форме" required> </textarea>
       </p>
-	  
-      <input type="submit" name="user-submit" id="user-submit" value="Отправить">
+
+      <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
     </form>
-  </section>
-</body>
+  </section> 
+  </body>
 </html>
