Закруглил кнопки, поправил стили

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	 
 	 <section class="partners">
       <h2 class="visually-hidden">Партнеры</h2>
-        <ul class="list-unstyled partner-list">
+        <ul class="list-unstyled partners-list">
         <li>
           <a class="partners-logo" href="https://htmlacademy.ru/intensive/htmlcss">
             <img src="img/logo-1.png" width="260" height="180" alt="Логотип HTML Academy">
