--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
     </header>
 
   <main class="container catalog">
-    <h1 class="title">Магазин готовых шаблонов</h1>
+    <h1 class="title visually-hidden">Магазин готовых шаблонов</h1>
     <aside class="template-filter">
       <h2 class="visually-hidden">Фильтр шаблонов</h2>
       <form methot="get" action="https://echo.htmlacademy.ru">
