--- a/index.html
+++ b/index.html
@@ -148,17 +148,11 @@
             ул. Б. Конюшенная, д. 19/8</p>
             <p>тел. +7 (812) 275-75-75</p>
           </address>
-          
-		  <a class="button write-button" href="#user-form">Напишите нам</a>
+          <a class="button write-button" href="#user-form">Напишите нам</a>
 	   </div>
-	  
 	  </div>
-	
-  	  <div class="map">
-        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">     
-      </div>
-	
-	</section>
+	  <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">     
+   	</section>
 	
 	
 	<section class="footer-social container">
@@ -206,7 +200,7 @@
         <div class="name-email">
 		<p>
 	      <label for="user-name">Ваше имя:</label>
-          <input type="text" name="user-name" id="user-name" autofocus placeholder="Имя Фамилия" required>
+          <input type="text" name="user-name" id="user-name" placeholder="Имя Фамилия" required>
         </p>
 	  
 	    <p>
@@ -217,7 +211,7 @@
 	    
 		<p class="user-message">
 	      <label for="user-message">Текст письма:</label>
-          <textarea name="user-message" id="user-message" value="Текст письма" placeholder="В свободной форме" required> </textarea>
+          <textarea name="user-message" id="user-message" value="Текст письма" required> В свободной форме</textarea>
         </p>
 	  
         <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
