Доделал блок сетки без состояний наведения

--- a/catalog.html
+++ b/catalog.html
@@ -222,7 +222,7 @@
         <div class="name-email">
 		<p>
 	      <label for="user-name">Ваше имя:</label>
-          <input type="text" name="user-name" id="user-name" autofocus placeholder="Имя Фамилия" required>
+          <input type="text" name="user-name" id="user-name"  placeholder="Имя Фамилия" required>
         </p>
 	  
 	    <p>
