Перекинул футер в каталог

--- a/index.html
+++ b/index.html
@@ -163,9 +163,12 @@
             <p>тел. +7 (812) 275-75-75</p>
           </address>
           <a class="button write-button" href="#user-form">Напишите нам</a>
+	    </div>
 	   </div>
-	  </div>
+	 
+	  <div class="map">
 	  <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">     
+	  </div>
    	</section>
 	
 	
