Добавил иконки для фильтра шаблонов

--- a/catalog.html
+++ b/catalog.html
@@ -132,11 +132,11 @@
 	  <div class="sort">
 	    <b>Сортировать</b>
           <ul class="list-unstyled sort-list">
-		    <li><a class="selected" href="#">По цене</a></li>
+		    <li class="selected"><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По названию</a></li>
-            <li><a class="btn-down" href="#">По убыванию</a></li>
-            <li><a class="btn-up" href="#">По возрастанию</a></li>
+            <li class="btn-down"><a href="#"><span class="visually-hidden">По убывнию</span></a></li>
+            <li class="btn-up"><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
 		  <ul>
       </div>
 	  
