Продолжил стилизацию каталога

--- a/catalog.html
+++ b/catalog.html
@@ -142,41 +142,43 @@
 	  
     <h2 class="visually-hidden">Каталог</h2>
       <ul class="list-unstyled templates-list">
-        <li class="catalog-item selected-item">
+        <li class="catalog-item">
           <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
-          <div class="catalog-item-text">
-            <a href="#"><h3 class="templates-title">Sedona</h3></a>
+          
+		  <div class="catalog-item-details">
+            <a href="#"><h3>Sedona</h3></a>
             <p>Информационный сайт для туристов</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
+		  
         </li>
         <li class="catalog-item">
           <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
-          <div class="catalog-item-text">
-            <a href="#"><h3 class="templates-title">Pink App</h3></a>
+         <div class="catalog-item-details">
+            <a href="#"><h3>Pink App</h3></a>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
         <li class="catalog-item">
           <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
-          <div class="catalog-item-text">
-            <a href="#"><h3 class="templates-title">Barbershop</h3></a>
+          <div class="catalog-item-details">
+            <a href="#"><h3>Barbershop</h3></a>
             <p>Сайт салоны красоты.Для мужчин, да.</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
         <li class="catalog-item">
           <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
-          <div class="catalog-item-text">
-            <a href="#"><h3 class="templates-title">Mishka</h3></a>
+          <div class="catalog-item-details">
+            <a href="#"><h3>Mishka</h3></a>
             <p>Интернет-магазин вязаных игрушек</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
         <li class="catalog-item">
           <img src="img/img-aplus.jpg" width="360" height="576" alt="A Plus">
-          <div class="catalog-item-text">
+          <div class="catalog-item-details">
             <a href="#"><h3>A Plus</h3></a>
             <p>Лендинг курсов повышения квалификации</p>
             <a class="button" href="#">9 900 руб</a>
@@ -184,16 +186,16 @@
         </li>
         <li class="catalog-item">
           <img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст">
-          <div class="catalog-item-text">
-            <a href="#"><h3 class="templates-title">Кваст</h3></a>
+          <div class="catalog-item-details">
+            <a href="#"><h3>Кваст</h3></a>
             <p>Лендинг курсов повышения квалификации</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
       </ul>
       <nav>
-        <ul class="list-unstyled pagination-list">
-          <li class="pagination-item-current"><a href="#">1</a></li>
+        <ul class="pagination-list list-unstyled">
+          <li class="pagination-item current-item"><a href="#">1</a></li>
           <li class="pagination-item"><a href="#">2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
           <li class="pagination-item"><a href="#">Следующая</a></li>
