Поправил стили внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
 		</fieldset>	  
 		
 		
-		<fieldset class="filter-item">
+		<fieldset class="filter-item features-filter">
           <legend>Особенности:</legend>
           <ul class="list-features list-unstyled">
 		   
@@ -130,7 +130,7 @@
     
 	<section class="templates">
 	  <div class="sort">
-	    <b>Сортировать</b>
+	    <b>Сортировать:</b>
           <ul class="list-unstyled sort-list">
 		    <li class="selected"><a href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
