Поправил ошибки после проверки валидатором

--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
     <aside class="template-filter">
       <h2 class="visually-hidden">Фильтр шаблонов</h2>
      
-	 <form methot="get" action="https://echo.htmlacademy.ru">
+	 <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="filter-item">
           <legend>Стоимость:</legend>
           <div class="range-filter">
@@ -137,7 +137,7 @@
             <li><a href="#">По названию</a></li>
             <li class="btn-down"><a href="#"><span class="visually-hidden">По убывнию</span></a></li>
             <li class="btn-up"><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
-		  <ul>
+		  </ul>
       </div>
 	  
     <h2 class="visually-hidden">Каталог</h2>
@@ -278,14 +278,14 @@
         </p>
 	  
 	    <p>
-	      <label class="lbl-email" for="e-mail">Ваш e-mail:</label>
+	      <label class="lbl-email" for="user-email">Ваш e-mail:</label>
           <input type="email" name="user-email" id="user-email" placeholder="email@example.com" required>
         </p>
         </div>
 	    
 		<p class="user-message">
 	      <label for="user-message">Текст письма:</label>
-          <textarea name="user-message" id="user-message" value="Текст письма" required> В свободной форме</textarea>
+          <textarea name="user-message" id="user-message" required> В свободной форме</textarea>
         </p>
 	  
         <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
