--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
         </p>
 	  
 	    <p>
-	      <label class="lbl-email" for="e-mail">Ваш e-mail:</label>
+	      <label class="lbl-email" for="user-email">Ваш e-mail:</label>
           <input type="email" name="user-email" id="user-email" placeholder="email@example.com" required>
         </p>
         </div>
 	    
 		<p class="user-message">
 	      <label for="user-message">Текст письма:</label>
-          <textarea name="user-message" id="user-message" value="Текст письма" required> В свободной форме</textarea>
+          <textarea name="user-message" id="user-message" required>В свободной форме</textarea>
         </p>
 	  
         <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
