--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -66,17 +66,17 @@
         <li class="service-site">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="button btn-order order-site-button" href="order-site.html">Заказать</a>
+          <a class="button button-order order-site-button" href="order-site.html">Заказать</a>
         </li>
         <li class="service-application">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="button btn-order  order-application-button" href="order-application.html">Заказать</a>
+          <a class="button button-order order-application-button" href="order-application.html">Заказать</a>
         </li>
         <li class="service-presentation">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="button btn-order order-presentation-button" href="order-presentation.html">Заказать</a>
+          <a class="button button-order order-presentation-button" href="order-presentation.html">Заказать</a>
         </li>
       </ul>
     </section>
